--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^2.1.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "firebase": "^10.3.1",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "stripe": "^13.5.0",
     "tailwindcss": "3.3.3"
   }
 }
