--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
-    "firebase": "^10.3.1",
+    "firebase": "^8.6.1",
+    "firebase-admin": "^11.10.1",
+    "micro": "^10.0.1",
+    "moment": "^2.29.4",
+    "mongodb": "^6.0.0",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
